# sync-py-linphone

./: .gitignore  .pypirc  execute.py  readme.md  requirements.txt  setup.cfg
models/: friends.py
utils/: contact.py  csv_manager.py  db_manager.py
utils/exceptions/: csv_exception.py  database_exception.py
