[metadata]
name = sync-py-linphone
version = 1.0
description = Simple command line command for sync Google Contacts CSV with Linphone app
long_description = file: readme.rst
url = https://github.com/progressify/sync-py-linphone
license = MIT
author = Progressify
author_email = info@progressify.dev
keywords = linphone, google contacts, address book, sync
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
install_requires =
    configparser
    requests
    click
    tqdm
[options]
zip_safe = False
python_requires = >= 3.7
test_suite = tests
packages =
    sync-py-linphone
[bdist_wheel]
universal=0